Fix first help uncollapse

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -102,7 +102,7 @@ main.loading {
   }
 }
 
-.help {
+#collapsible {
   display: none;
 }
 .expanded {
